# Hello-World-Temporal

./: .gitignore  README.md  client.py  pyproject.toml  worker.py
activities/: greeting_activity.py
tests/: test_client.py
workflows/: greeting_workflow.py
